# ros-oneday

./: README.md  build.sh  setup.sh
.devcontainer/ros/: .env.template  Dockerfile  compose.yml  devcontainer.json
.devcontainer/ros-codespace/: devcontainer.json
.devcontainer/ros-windows/: devcontainer.json
.devcontainer/ros2/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/ros2-codespace/: compose.yml  devcontainer.json  override.yml
.devcontainer/ros2-windows/: compose.yml  devcontainer.json  override.yml
.github/workflows/: docker-image.yml
src/: README.md
src/dyno_description/: CMakeLists.txt  package.xml
src/dyno_description/launch/: dyno_display.launch
src/dyno_description/meshes/: base_link.STL  castor.STL  left_wheel.STL  right_wheel.STL
src/dyno_description/rviz/: model.rviz
src/dyno_description/urdf/: dyno_minion.gv  dyno_minion.urdf
src/dyno_gazebo/: CMakeLists.txt  package.xml
src/dyno_gazebo/launch/: dyno_double_wall.launch  dyno_empty_world.launch  dyno_house.launch  dyno_new_home.launch  dyno_world.launch
src/dyno_gazebo/models/double_wall/: model.config  model.sdf
src/dyno_gazebo/models/dyno_house/: model.config  model.sdf
src/dyno_gazebo/models/new_home/: model.config  model.sdf
src/dyno_gazebo/models/waypoints_wall/: model.config  model.sdf
src/dyno_gazebo/rviz/: dyno_gazebo_model.rviz
src/dyno_gazebo/worlds/: double_wall.world  house.world  new_home.world  world.world
src/dyno_real/dyno_real/: CMakeLists.txt  package.xml
src/dyno_real/dyno_real/launch/: dyno_encoders.launch  dyno_odom.launch  dyno_odom_imu.launch
src/dyno_real/dyno_real/src/: call_back.py  left_encoder_ticks.py  odom_pub.py  right_encoder_ticks.py
src/dyno_teleop/: CMakeLists.txt  package.xml  setup.py
src/dyno_teleop/cmake/: dyno_teleopConfig.cmake
src/dyno_teleop/launch/: dyno_teleop_key.launch
src/dyno_teleop/nodes/: dyno_teleop_key
src/onbot_controller/: CMakeLists.txt  package.xml
src/onbot_controller/config/: onbot_controller.yaml
src/onbot_description/: CMakeLists.txt  package.xml
src/onbot_description/config/: display.rviz  ros_gz_bridge.yaml
src/onbot_description/hooks/: onbot_description.dsv.in
src/onbot_description/launch/: display.launch.py  gazebo.launch.py
src/onbot_description/model/: config.json  end_effector.part  end_effector.stl  link_0.part  link_0.stl  link_1.part  link_1.stl  link_2.part  link_2.stl  link_3.part  link_3.stl  link_4.part  link_4.stl  link_5.part  link_5.stl  robot.urdf
src/onbot_description/worlds/: empty.world
