<?xml version="1.0"?>
<package format="2">
  <name>dyno_teleop</name>
  <version>1.0.1</version>
  <description>
    Provides teleoperation using keyboard for dyno.
  </description>
  <license>BSD</license>
  <author email="rubesh@robotoai.com">Rubesh</author>  
  <author>RobotoAI</author>
  <maintainer email="rubesh@robotoai.com">Rubesh</maintainer>
  <url type="website">http://www.robotoai.com</url>
  
  <url type="repository">https://github.com/Rubeshthirumani/dyno_minion</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
